syntax = "proto3";
package ecommerce;
option java_package = "com.server.ecommerce";
option java_multiple_files = true;
option java_outer_classname = "ProductProto";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
}

message ProductId {
  string value = 1;
}

service ProductResource {
  rpc getProduct(ProductId) returns (Product);
  rpc addProduct(Product) returns (ProductId);
}
